examples/test/testpolicy13396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13396
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key26: value42
      key24: value34
      key17: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value12
          key42: value3
          key39: value41
      podSelector:
        matchLabels:
          key8: value32
